# prs_labs

lab_1/: CMakeLists.txt  main.cpp
lab_10/: CMakeLists.txt  main.cpp
lab_11/: L10.ipynb
lab_2/: CMakeLists.txt  main.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_4/: CMakeLists.txt  main.cpp
lab_5/: CMakeLists.txt  main.cpp
lab_5/src/slider/: slider.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_7/: CMakeLists.txt  main.cpp
lab_7/src/common/file/: file_utils.cpp
lab_8/: CMakeLists.txt  main.cpp
lab_9/: CMakeLists.txt  main.cpp
lab_9/src/color_spaces/: spaces.cpp
lab_9/src/common/: common.h
project/: CMakeLists.txt  ean13_digit_model.keras  main.cpp  main.py  train_model_on_tmnist.py
project/documentation/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc
project/gui/: controller.py  ml_utils.py  model.py  view.py
project/src/ui/: cvui.h
project/src/utils/: BarcodeUtils.cpp  BarcodeUtils.h
